
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int memcpy (char*,char*,int) ;
 int sub_12A80 (char*,int,char*) ;
 int sub_12B60 (char*,int,char*) ;

void calc_seed(char* seed, char* dst)
{
 char Source1[26] = {0};
 char a3[300] = {0};

 Source1[0] = 8;
 Source1[1] = 14;
 Source1[2] = 8;
 Source1[3] = 10;
 Source1[4] = 2;
 Source1[5] = 3;
 Source1[6] = 29;
 Source1[7] = 23;
 Source1[8] = 13;
 Source1[9] = 3;
 Source1[10] = 15;
 Source1[11] = 22;
 Source1[12] = 15;
 Source1[13] = 7;
 Source1[14] = 91;
 Source1[15] = 4;
 Source1[16] = 18;
 Source1[17] = 26;
 Source1[18] = 26;
 Source1[19] = 3;
 Source1[20] = 4;
 Source1[21] = 1;
 Source1[22] = 15;
 Source1[23] = 25;
 Source1[24] = 10;
 Source1[25] = 13;

 sub_12A80(seed, 0x14, a3);
 sub_12B60(Source1, 0x1A, a3);
 memcpy(dst, Source1, 26);
}
